<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sdcn.project.ecommerce_client_distributed.signup_mailpassword">

    <LinearLayout
        android:id="@+id/linearLayout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_onSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/menu" />

        <TextView
            android:id="@+id/textView_accountSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/accountSettings"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_accountFirstNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/actor"
            android:text="@string/productNameField"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_accountFirstNameValue"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzáéíóúÁÉÍÓÚ1234567890"
                android:ems="10"
                android:fontFamily="@font/actor"
                android:hint="@string/firstNameValue"
                android:inputType="textFilter"
                android:autofillHints="" />

            <EditText
                android:id="@+id/editText_accountLastNameValue"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzáéíóúÁÉÍÓÚ1234567890"
                android:ems="10"
                android:fontFamily="@font/actor"
                android:hint="@string/lastNameValue"
                android:inputType="textFilter"
                android:autofillHints="" />
        </LinearLayout>

        <TextView
            android:id="@+id/TextView_accountMailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/actor"
            android:text="@string/e_mailField"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_accountMailValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/actor"
            android:hint="@string/e_mailValue"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/TextView_accountPhoneField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/actor"
            android:text="@string/phoneField"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_accountPhoneValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:ems="10"
            android:hint="@string/phoneValue"
            android:inputType="phone"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView_accountPhoneAdvise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/whyphone" />

        <TextView
            android:id="@+id/textView_accountLocationField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/actor"
            android:text="@string/locationField"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_accountLocationValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/locationValue"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_accountLocationSuggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/whylocation" />

        <Button
            android:id="@+id/button_accountAddMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/addLocation" />

        <Button
            android:id="@+id/button_saveAccountChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:text="@string/saveChanges" />

    </LinearLayout>
</ScrollView>