<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:iconifiedByDefault="false"
        android:orderInCategory="2"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always"
        android:orderInCategory="4" />
    <item
        android:id="@+id/action_cart"
        android:title="@string/trolley"
        android:icon="@drawable/empty_grocery_cart"
        android:orderInCategory="4"
        app:showAsAction="ifRoom"
        />


</menu>